Updated CSS and styling for services section

--- a/templates/about.html
+++ b/templates/about.html
@@ -56,18 +56,18 @@
         <div class="team-grid">
             <div class="team-member">
                 <img src="{{ url_for('static', filename='images/team1.jpg') }}" alt="CEO">
-                <h4>Linda Mensah</h4>
+                <h4>Henry Oppong</h4>
                 <p>Founder & CEO</p>
             </div>
             <div class="team-member">
                 <img src="{{ url_for('static', filename='images/team2.jpg') }}" alt="Travel Consultant">
-                <h4>Kwame Ofori</h4>
-                <p>Senior Travel Consultant</p>
+                <h4>Bobart</h4>
+                <p>Chief Operating Officer</p>
             </div>
             <div class="team-member">
                 <img src="{{ url_for('static', filename='images/team3.jpg') }}" alt="Guide">
-                <h4>Akua Boateng</h4>
-                <p>Tour Guide</p>
+                <h4>Isaiah Badazabra</h4>
+                <p>Managing Director</p>
             </div>
         </div>
     </div>
